# challenge-ds-meli

./: .gitignore  DOC.md  LICENSE  README.md  main.py  pyproject.toml
config/: config.py  logger.py
notebooks/: 01_EDA.ipynb  02_feature_selection.ipynb
src/modeling/: feature_selection.py  xgboost_training.py
src/processing/: data_processing.py
src/utils/: aux_colums_functions.py  convert_datatype_utils.py  feature_engineering.py  image_utils.py  json_adv_utils.py
